# lean-toolchain

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  lake-manifest.json  lakefile.lean
.github/: dependabot.yml
.github/workflows/: formal-verify.yml  local-ci.yml  proof-bot.yml
LeanToolchain/Crypto/: HMAC.lean  SHA256.lean  Utils.lean
LeanToolchain/Crypto/Tests/: HMACTests.lean  SHA256Tests.lean
LeanToolchain/Extraction/: CodeGenerator.lean  Main.lean
LeanToolchain/Math/: Matrix.lean  Norm.lean  Vector.lean
LeanToolchain/Math/Tests/: MatrixTests.lean  NormTests.lean  VectorTests.lean
LeanToolchain/Tests/: Unified.lean
docs/: index.md  mkdocs.yml  vector-implementation.md
docs/api/: crypto.md  math.md
docs/development/: ci.md  contributing.md  extraction.md  style-guide.md
docs/getting-started/: installation.md  quick-start.md
rust/: Cargo.toml
rust/benches/: hmac_bench.rs  matrix_bench.rs  sha256_bench.rs  vector_bench.rs
rust/src/: hmac.rs  lib.rs  matrix.rs  sha256.rs  vector.rs
rust/tests/: crypto_parity.rs
scripts/: check_sorry.sh  sorry_allowlist.txt
